fix: fixed flickering when hovering over panels with the mouse

--- a/static/tblog/custom.css
+++ b/static/tblog/custom.css
@@ -36,8 +36,14 @@ body {
 }
 
 .btn-list-link {
+    background-color: var(--bs-white);
     text-align: left;
     padding: 0.5rem 1rem;
+    transition: none;
+}
+
+.btn-list-link .badge {
+    transition: none;
 }
 
 .btn-list-link:hover {
